# Real-Life-Human-Detection-with-3D-Lidar-data

./: .gitignore  .gitmodules  README.md  Report#1.md  Report#3.md  report#2.md  tree.txt
agilex_code/agilex_scout_mini/launch/include/: gmapping.launch
agilex_code/agilex_scout_mini/params/: costmap_common_params.yaml  global_costmap_params.yaml
agilex_code/human_detection/: CMakeLists.txt  package.xml
agilex_code/human_detection/launch/: human_detection.launch
agilex_code/human_detection/src/: detectHumanYOLO.py
existing_models/KITTI_dataset/: setup.ipynb
existing_models/LidarTracking3D/src/lidar_tracker_validation/: CMakeLists.txt  package.xml
existing_models/LidarTracking3D/src/lidar_tracker_validation/launch/: validate_tracker.launch
existing_models/LidarTracking3D/src/lidar_tracker_validation/rviz/: lidar_validation_scene.rviz
existing_models/datasets/KITTI_dataset/: setup.ipynb
existing_models/nuScenes_dataset/: setup.ipynb
our_code/: human_detection_PC.ipynb  point_detection_test.py
our_code/chatgpt_detection/: detection.py
reports/: Report#3.md
src/agilex_scout_mini/: .description.swp  output.txt
src/agilex_scout_mini/params/: local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/agilex_scout_mini/rviz/: scout.rviz
src/human_detection/include/kkl/cvk/: cvutils.hpp
src/human_detection/launch/: record_with_camera.launch
src/human_detection/src/: lidar_camera_syncronizer.cpp  yolo_to_transform.py
src/rosbag2video/: CMakeLists.txt  package.xml
src/rosbag2video/launch/: rosbag2video.launch
